Project

General

Profile

Actions

Bug #5762

closed

Bug#4178 が sparc Solaris 10 + Oracle Solaris Studio 12.2 で再発

Bug #5762: Bug#4178 が sparc Solaris 10 + Oracle Solaris Studio 12.2 で再発

Added by ngoto (Naohisa Goto) over 14 years ago. Updated over 14 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.0.0dev (2011-12-14) [sparc-solaris2.10]
Backport:
[ruby-dev:45000]

Description

Bug #4178 が sparc Solaris 10 + Oracle Solaris Studio 12.2 にて再発しています。
SunStudio 11, gcc, fcc など他のコンパイラでは発生していません。

  1. Failure:
    test_singleton_method(TestGc) [/XXX/YYY/test/ruby/test_gc.rb:71]:
    [ruby-dev:42832].
    Exception raised:
    <#<RuntimeError: obj.foo is called, but this is obj.bar>>.

添付のパッチでこのFailureが出なくなるのを確認しました。(r34041にて確認)


Files

20111214-Bug4178-again.patch (366 Bytes) 20111214-Bug4178-again.patch ngoto (Naohisa Goto), 12/15/2011 12:08 AM

Related issues 1 (0 open1 closed)

Related to Ruby - Bug #4178: test/rubygems/gemutilities.rb で、よくわからない ArgumentErrorClosedActions

Updated by ngoto (Naohisa Goto) over 14 years ago Actions #1

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r34071.
Naohisa, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • vm.c (vm_define_method): improve guard of iseq from GC. Fix
    failure or segmentation fault in test_singleton_method(TestGc)
    on sparc Solaris10 compiled with Oracle Solaris Studio 12.2.
    [Bug #5762] [ruby-dev:45000] [Bug #4178]
Actions

Also available in: PDF Atom