* vm.c (vm_define_method): improve guard of iseq from GC.  Fix   failure or segmentation fault in test_singleton_method(TestGc)   on sparc Solaris10 compiled with Oracle Solaris Studio 12.2.   [Bug #5762] [ruby-dev:45000] [Bug #4178]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34071 b2dd03c8-39d4-4d8f-98ff-823fe69b080e